--- a/index.html
+++ b/index.html
@@ -85,6 +85,52 @@
         #playershow{
             font-size: 70px;
         }
+        /* Pfbbe */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        #mode-selection {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        #mode-selection button {
+            padding: 10px 20px;
+            font-size: 18px;
+            margin: 5px;
+            cursor: pointer;
+            border: none;
+            background-color: #4CAF50;
+            color: white;
+            border-radius: 5px;
+        }
+
+        #mode-selection button:hover {
+            background-color: #45a049;
+        }
+
+        #game-board {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .big-board {
+            margin-bottom: 20px;
+        }
+
+        #painel {
+            text-align: center;
+            font-size: 24px;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
