Prevent local mode from allowing online play
* Add a check in the `jogar` function to alert the user and return if the current mode is 'local'

--- a/index.html
+++ b/index.html
@@ -362,6 +362,11 @@
     }
 
     function jogar(celula, botao) {
+        if (currentMode === 'local') {
+            alert("Local mode is not supported for online play.");
+            return;
+        }
+
         if (playerAtual !== currentPlayer) {
             alert("It's not your turn!");
             return;
